--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ img {
 
 /* footer */
 .page-footer {
+  min-width: 1600px;
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -204,7 +205,15 @@ img {
 /* hero */
 .hero {
   background-color: #2f303a;
+  min-width: 1600px;
+  min-height: 600px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/background.jpg);
   text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
   padding-top: 200px;
   padding-bottom: 200px;
 }
@@ -247,11 +256,41 @@ img {
 /* Features */
 .features-display {
   display: flex;
-  justify-content: space-between;
 }
 
 .features-display .item {
   width: 270px;
+}
+
+.features-display .item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.features-display .item::before {
+  content: '';
+  display: block;
+  height: 120px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
+.features-display .item:nth-child(1)::before {
+  background-image: url(../images/antenna.svg);
+}
+
+.features-display .item:nth-child(2)::before {
+  background-image: url(../images/clock.svg);
+}
+
+.features-display .item:nth-child(3)::before {
+  background-image: url(../images/diagram.svg);
+}
+
+.features-display .item:nth-child(4)::before {
+  background-image: url(../images/astronaut.svg);
 }
 
 .features-title {
