Добавляет ховер на карточки в портфолио

--- a/css/styles.css
+++ b/css/styles.css
@@ -586,3 +586,8 @@ img {
   border: 1px solid #eeeeee;
   border-top: 1px solid transparent;
 }
+
+.products .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
